<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/backGroundDialog"
    app:cardElevation="@dimen/dialogElevation"
    app:cardCornerRadius="5dp"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dialogMargin"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.tesla.ai.DeleteActivity">

   <TextView
       android:text="@string/areYouSureToDelete"
       android:textSize="20sp"
       android:textColor="@color/textColor"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginLeft="20dp"
       android:layout_marginTop="20dp"
       android:layout_marginRight="40dp"
       android:layout_marginBottom="20dp"/>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="40dp">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:text="@string/sure"
          android:onClick="sureToDelete"
          android:id="@+id/sureToDelete"
          android:layout_weight="1"
          android:layout_gravity="bottom"
          android:gravity="center"
          android:background="@drawable/bd_wallet_bottom_1_selector"
          android:padding="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="10dp"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:text="@string/cancel"
          android:onClick="cancelToDelete"
          android:id="@+id/notSureToDelete"
          android:layout_weight="1"
          android:layout_gravity="bottom"
          android:gravity="center"
          android:background="@drawable/bd_wallet_bottom_1_selector"
          android:padding="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="10dp"/>
  </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>
